# TinyCCompiler

./: CMakeLists.txt  main.cc  run.sh  test.cc  ut_scanner.cc  ut_token.cc
common/: common.h
parser/: lexer.cc  lexer.h  scanner.cc  scanner.h  token.cc  token.h
tests/: test.cc
